Added an x button for the operator list for future removal capabilities

--- a/style.css
+++ b/style.css
@@ -42,3 +42,10 @@ ul#squad > img {
 ul#squad > li {
     text-align: center;
 }
+
+ul#squad > button {
+    padding: 0;
+    border: none;
+    background: red;
+    color: white;
+}
